[project]
name = "icu-alarm-fatigue-reducer"
version = "1.0.0"
description = "An OpenEnv-compatible AI environment where agents learn to reduce ICU alarm fatigue by classifying patient alarms as real emergencies or false alarms."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.8.2",
    "openai==1.51.0",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/mansi-patil/icu-alarm-env"
Repository = "https://github.com/mansipatil03/ICU-Alarm-Fatigue-Reducer-"

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
